--- a/flex-grid/index.html
+++ b/flex-grid/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>I was born in Detroit. I'm married with two kids.  I like learning new things, coding and spending time with my family.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>My passion:  I love music.  I play guitar, write songs and love discovering new bands.  Music is like a portal.  Any single song can trigger a memory and put right back in that moment.</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>Fun fact: I've got more than a dozen tattoos.  It's true what they say, they're addicting. I would love to get more but I'm broke!</p>
             </div>
         </section>    
 
