--- a/flex-grid/index.html
+++ b/flex-grid/index.html
@@ -15,13 +15,22 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Mansalva|Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
         <section class="wrapper">
+            <header> 
+                <p>Hi! I'm Ross!</p>
+            </header>
+
+            <div class="about">
+                <p>I'm an aspiring web developer.  I love the creativity involved in building a website.  I have a background in writing news for T.V., radio and print.  I love a good challenge that allows me to showcase my creativity.</p>
+            </div>
+
             <div class="div-1">
                 <p>I was born in Detroit. I'm married with two kids.  I like learning new things, coding and spending time with my family.</p>
             </div>
@@ -31,6 +40,12 @@
             <div class="div-3">
                 <p>Fun fact: I've got more than a dozen tattoos.  It's true what they say, they're addicting. I would love to get more but I'm broke!</p>
             </div>
+
+            <footer>
+                    <a href="https://www.facebook.com/ross.raybin" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/RossRaybin" class="fa fa-twitter"></a>
+                    <a href="https://www.instagram.com/wrraybin/" class="fa fa-instagram"></a>
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
