--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,12 +18,68 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+    <header>
+      <div class="content-wrapper">
+        <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="about/index.html" target="_blank">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <main>
+      <section class="hero-area">
+          <div class="content-wrapper">
+              <h1>Unplug from the daily grind and plug into your creativity.</h1>
+          </div>
+      </section>    
+
+      <aside>
+          <div class="content-wrapper">
+              <div class="from-description">
+                  <h3>Want to join the next jam session?</h3>
+                  <p>Find out when we are holding our next session and how you can sign up!</p>
+              </div>
+              <div class="form">
+                  <h3>Find out more</h3>
+                  <input type="text" name="name" value="email address">
+                  <input type="button" value="Download Itinerary">
+              </div>
+          </div>
+      </aside>
+
+
+  </main>
+
+  <footer>
+      <div class="content-wrapper">
+          <div class="footer-content">
+            <address class="contact">
+              <h4>Contact</h4>
+              <p>555-555-5555
+              <br>
+              hello@unplugged.com</p>
+            </address>
+              <div class="social">
+                <h4>Social</h4>
+                  <div class="social-icons">
+                    <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>FB</p>
+                    <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>Twit</p>
+                    <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>Insta</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="copyright">
+          <p>Copyright 2019 | Unplugged</p>
+      </div>
+
+  </footer>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
