--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -51,6 +51,46 @@
               </div>
           </div>
       </aside>
+      
+      <section class="features">
+        <h1>Shred like a master.  Play guitar like you've always wanted to.</h1>
+          <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Located in on the main floor of the Fisher Building in downtown Detroit.</p>
+          </article>
+          <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">12 private studios to ensure privacy when recording.</p>
+          </article>
+          <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Equipment repair technicians onsite for any audio or instrument problems.</p>
+          </article>
+          <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Brainstorming area where you can collaborate lyrics and music with other artists.</p>
+          </article>
+          <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Instructors on hand to help manage your day to day activities.</p>
+          </article>
+          <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Dedicated soundproof where you can escape the noise and relax.</p>
+          </article>
+      </section>
+
+      <section class="reviews">
+          <div class="content-wrapper">
+              <h1>Be a better guitarist in 5 days, like these.</h1>
+              <a href="#" alt="review logo"></a>
+              <h3>Jeff Bezos
+                <br>
+                October 2019
+              </h3>
+              <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book </p>
+          </div>
+      </section>
 
 
   </main>
