--- a/unplugged/faq/index.html
+++ b/unplugged/faq/index.html
@@ -18,12 +18,69 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+    <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="faq">
+
+            <div class="content-wrapper">
+                <h1>Frequently Asked Questions</h1>
+                <div class="faq-content">
+                  <h4>How do I get to the Unplugged retreat?</h4>
+                  <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                </div>
+                <div class="faq-content">
+                  <h4>What kind of team is right for Unplugged?</h4>
+                  <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                </div>
+                <div class="faq-content">
+                  <h4>What size bands can you accommodate?</h4>
+                  <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                </div>
+                <div class="faq-content">
+                  <h4>Is there really no minimum skill level?</h4>
+                  <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+                </div>
+            </div>
+      
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+        <div class="footer-content">
+          <address class="contact">
+            <h4>Contact</h4>
+            <p>555-555-5555
+            <br>
+            hello@unplugged.com</p>
+          </address>
+            <div class="social">
+              <h4>Social</h4>
+                <div class="social-icons">
+                  <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>FB</p>
+                  <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>Twit</p>
+                  <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>Insta</p>
+                </div>
+            </div>
+        </div>
+    </div>
+  
+    <div class="copyright">
+        <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate for FAQ.</p>
   <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
