--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <!--Google Fonts-->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -34,15 +36,15 @@
   <main>
       <section class="hero-area">
           <div class="content-wrapper">
-              <h1>Unplug from the daily grind and plug into your creativity.</h1>
+              <h1>Retreat from the desk, return refreshed.</h1>
           </div>
       </section>    
 
       <aside>
           <div class="content-wrapper">
               <div class="from-description">
-                  <h3>Want to join the next jam session?</h3>
-                  <p>Find out when we are holding our next session and how you can sign up!</p>
+                  <h3>Want to join the next retreat?</h3>
+                  <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
               </div>
               <div class="form">
                   <h3>Find out more</h3>
@@ -53,36 +55,36 @@
       </aside>
       
       <section class="features">
-        <h1>Shred like a master.  Play guitar like you've always wanted to.</h1>
+        <h1>Have the work week you've always dreamed of - without the bad wifi.</h1>
           <article>
               <p class="fontawesome-icon"></p>
-              <p class="features-item-description">Located in on the main floor of the Fisher Building in downtown Detroit.</p>
+              <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
               <p class="fontawesome-icon"></p>
-              <p class="features-item-description">12 private studios to ensure privacy when recording.</p>
+              <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
           </article>
           <article>
               <p class="fontawesome-icon"></p>
-              <p class="features-item-description">Equipment repair technicians onsite for any audio or instrument problems.</p>
+              <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
           </article>
           <article>
               <p class="fontawesome-icon"></p>
-              <p class="features-item-description">Brainstorming area where you can collaborate lyrics and music with other artists.</p>
+              <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
           </article>
           <article>
               <p class="fontawesome-icon"></p>
-              <p class="features-item-description">Instructors on hand to help manage your day to day activities.</p>
+              <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
           </article>
           <article>
               <p class="fontawesome-icon"></p>
-              <p class="features-item-description">Dedicated soundproof where you can escape the noise and relax.</p>
+              <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
           </article>
       </section>
 
       <section class="reviews">
           <div class="content-wrapper">
-              <h1>Be a better guitarist in 5 days, like these.</h1>
+              <h1>Be a better team in 5 days, like these.</h1>
               <a href="#" alt="review logo"></a>
               <h3>Jeff Bezos
                 <br>
