--- a/unplugged/faq/index.html
+++ b/unplugged/faq/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+    <!--Google Fonts-->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -40,15 +43,15 @@
                   <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
                 </div>
                 <div class="faq-content">
-                  <h4>What kind of team is right for Unplugged?</h4>
+                  <h4>What kind of team is right for Unplugged retreat?</h4>
                   <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
                 </div>
                 <div class="faq-content">
-                  <h4>What size bands can you accommodate?</h4>
+                  <h4>What size teams can you accommodate?</h4>
                   <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
                 </div>
                 <div class="faq-content">
-                  <h4>Is there really no minimum skill level?</h4>
+                  <h4>Is there really no wifi available?</h4>
                   <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
                 </div>
             </div>
