--- a/unplugged/about/index.html
+++ b/unplugged/about/index.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+    <!--Google Fonts-->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -36,8 +39,8 @@
 
   <section class="mission">
       <div class="content-wrapper">
+          <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
           <div class="mission-content">
-              <h1>Our Mission - we want to make you the musician you always wanted to be.</h1>
               <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
           </div>
       </div>
@@ -51,9 +54,10 @@
       </div>
   </section class="contact-section">
       <div class="content-wrapper">
-              <h1>Contact us, because you need this</h1>
+              <h2>Contact us, because you need this</h2>
+              <address class="contact-content">
           <div>
-              <h3>General Information</h3>
+              <h4>General Information</h4>
               <p>333 Main St., Detroit, MI 48051
                 <br>
                 555-555-5555<br>
@@ -69,7 +73,7 @@
 
           </div>
       </div>
-
+    </address>
   <section>
 
   </section>
