--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -22,7 +22,9 @@
 <body>
     <header>
       <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo"></a>
+        <figure>
+          <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+        </figure>
       <div class="header-divider"></div>
         <nav>
           <ul>
@@ -39,7 +41,6 @@
               <h1>Retreat from the desk, return refreshed.</h1>
           </div>
       </section>    
-
       <aside>
           <div class="content-wrapper">
               <div class="from-description">
@@ -84,13 +85,19 @@
 
       <section class="reviews">
           <div class="content-wrapper">
-              <h1>Be a better team in 5 days, like these.</h1>
-              <a href="#" alt="review logo"></a>
-              <h3>Jeff Bezos
-                <br>
-                October 2019
-              </h3>
-              <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book </p>
+              <h2>Be a better team in 5 days, like these.</h2>
+              <article>
+                <figure>
+                  <img src="img/team.jpg" alt="review-pic">
+                </figure>
+                <div>
+                  <h3>Jeff Bezos
+                  <br>
+                  October 2019
+                  </h3>
+                  <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book </p>
+          </div>
+          </article>
           </div>
       </section>
 
