--- a/unplugged/about/index.html
+++ b/unplugged/about/index.html
@@ -49,7 +49,7 @@
   <section class="map">
       <div class="content-wrapper">
           <figure>
-
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.715528827393!2d-83.07976578462576!3d42.369901442472745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824d29d0ce364d3%3A0x39fa219596eaf647!2sFisher%20Bldg%2C%203011%20W%20Grand%20Blvd%2C%20Detroit%2C%20MI%2048202!5e0!3m2!1sen!2sus!4v1570553709258!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </figure>
       </div>
   </section class="contact-section">
