--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -58,27 +58,39 @@
       <section class="features">
         <h1>Have the work week you've always dreamed of - without the bad wifi.</h1>
           <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-campground"></i>
+              </p>
               <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-bed"></i>
+              </p>
               <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
           </article>
           <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-utensils"></i>
+              </p>
               <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
           </article>
           <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-shoe-prints"></i>
+              </p>
               <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
           </article>
           <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="far fa-smile"></i>
+              </p>
               <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
           </article>
           <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-wifi"></i>
+              </p>
               <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
           </article>
       </section>
@@ -129,6 +141,7 @@
       </div>
 
   </footer>
+  <script src="https://kit.fontawesome.com/2b0f4a8e36.js" crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
