--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -128,9 +128,15 @@
               <div class="social">
                 <h4>Social</h4>
                   <div class="social-icons">
-                    <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>FB</p>
-                    <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>Twit</p>
-                    <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>Insta</p>
+                    <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>
+                      <i class="fab fa-facebook"></i>
+                    </p>
+                    <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>
+                      <i class="fab fa-twitter"></i>
+                    </p>
+                    <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>
+                      <i class="fab fa-instagram"></i>
+                    </p>
                   </div>
               </div>
           </div>
