--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -59,37 +59,37 @@
         <h1>Have the work week you've always dreamed of - without the bad wifi.</h1>
           <article>
               <p class="fontawesome-icon">
-                <i class="fas fa-campground"></i>
+                <i class="fas fa-campground fa-3x"></i>
               </p>
               <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
               <p class="fontawesome-icon">
-                <i class="fas fa-bed"></i>
+                <i class="fas fa-bed fa-3x"></i>
               </p>
               <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
           </article>
           <article>
               <p class="fontawesome-icon">
-                <i class="fas fa-utensils"></i>
+                <i class="fas fa-utensils fa-3x"></i>
               </p>
               <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
           </article>
           <article>
               <p class="fontawesome-icon">
-                <i class="fas fa-shoe-prints"></i>
+                <i class="fas fa-shoe-prints fa-3x"></i>
               </p>
               <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
           </article>
           <article>
               <p class="fontawesome-icon">
-                <i class="far fa-smile"></i>
+                <i class="far fa-smile fa-3x"></i>
               </p>
               <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
           </article>
           <article>
               <p class="fontawesome-icon">
-                <i class="fas fa-wifi"></i>
+                <i class="fas fa-wifi fa-3x"></i>
               </p>
               <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
           </article>
