--- a/unplugged/about/index.html
+++ b/unplugged/about/index.html
@@ -10,26 +10,27 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
     <!--Google Fonts-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 </head>
 
 <body>
  
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="../index.html">
+        <img src="" alt="unplugged logo">
+      </a>
     <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
@@ -41,18 +42,27 @@
       <div class="content-wrapper">
           <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
           <div class="mission-content">
-              <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+              vel facilisis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+              vel facilisis.
+            </p>
           </div>
       </div>
   </section>
 
   <section class="map">
-      <div class="content-wrapper">
-          <figure>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.715528827393!2d-83.07976578462576!3d42.369901442472745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824d29d0ce364d3%3A0x39fa219596eaf647!2sFisher%20Bldg%2C%203011%20W%20Grand%20Blvd%2C%20Detroit%2C%20MI%2048202!5e0!3m2!1sen!2sus!4v1570553709258!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-          </figure>
-      </div>
-  </section class="contact-section">
+      <figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.715528827393!2d-83.07976578462576!3d42.369901442472745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824d29d0ce364d3%3A0x39fa219596eaf647!2sFisher%20Bldg%2C%203011%20W%20Grand%20Blvd%2C%20Detroit%2C%20MI%2048202!5e0!3m2!1sen!2sus!4v1570553709258!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </figure>
+    </section>    
+     
+  <section class="contact-section">
       <div class="content-wrapper">
               <h2>Contact us, because you need this</h2>
               <address class="contact-content">
@@ -74,10 +84,7 @@
           </div>
       </div>
     </address>
-  <section>
-
   </section>
-
 
 </main>
 
@@ -88,14 +95,21 @@
           <h4>Contact</h4>
           <p>555-555-5555
           <br>
-          hello@unplugged.com</p>
+          hello@unplugged.com
+        </p>
         </address>
           <div class="social">
             <h4>Social</h4>
               <div class="social-icons">
-                <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>FB</p>
-                <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>Twit</p>
-                <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>Insta</p>
+                <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>
+                  <i class="fab fa-facebook"></i>
+                </p>
+                <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>
+                  <i class="fab fa-twitter"></i>
+                </p>
+                <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>
+                  <i class="fab fa-instagram"></i>
+                </p>
               </div>
           </div>
       </div>
@@ -106,6 +120,7 @@
   </div>
 </footer>
   
+<script src="https://kit.fontawesome.com/2b0f4a8e36.js" crossorigin="anonymous"></script>
   <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
