--- a/unplugged/faq/index.html
+++ b/unplugged/faq/index.html
@@ -17,18 +17,21 @@
   <meta name="theme-color" content="#fafafa">
     <!--Google Fonts-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 
 </head>
 
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <figure>
+      <a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
     <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
@@ -70,9 +73,15 @@
             <div class="social">
               <h4>Social</h4>
                 <div class="social-icons">
-                  <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>FB</p>
-                  <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>Twit</p>
-                  <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>Insta</p>
+                  <p><a href="https://www.facebook.com/ross.raybin" target="_blank"></a>                 
+                     <i class="fab fa-facebook"></i>
+                  </p>
+                  <p><a href="https://twitter.com/RossRaybin" target="_blank"></a>
+                    <i class="fab fa-twitter"></i>
+                  </p>
+                  <p><a href="https://www.instagram.com/wrraybin/" target="_blank"></a>
+                    <i class="fab fa-instagram"></i>
+                  </p>
                 </div>
             </div>
         </div>
@@ -84,6 +93,7 @@
   </footer>
 
   <!-- Add your site or application content here -->
+  <script src="https://kit.fontawesome.com/2b0f4a8e36.js" crossorigin="anonymous"></script>
   <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
